samples/_failures_safe/1761436657_6c2d10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32bd2cf4.c: In function ‘main’:
./samples/SAFE/__tmp_32bd2cf4.c:161:17: error: expected declaration or statement at end of input
  161 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_32bd2cf4.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32bd2cf4.c:161:17: error: expected declaration or statement at end of input
